--- a/config/services.yml
+++ b/config/services.yml
@@ -8,7 +8,7 @@ services:
         class: marttiphpbb\calendarweekview\event\render_listener
         arguments:
             - '@auth'
-            - '@marttiphpbb\calendarweekview\service\render'
+            - '@marttiphpbb.calendarweekview.render'
         tags:
             - { name: event.listener }
 
