--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-	"name": "marttiphpbb/calendarweekview",
+	"name": "marttiphpbb/calendarinlineview",
 	"type": "phpbb-extension",
-	"description": "Calendar Week View Extension for phpBB 3.2",
-	"homepage": "https://github.com/marttiphpbb/phpbb-ext-calendarweekview",
+	"description": "Calendar Inline View Extension for phpBB 3.2",
+	"homepage": "https://github.com/marttiphpbb/phpbb-ext-calendarinlineview",
 	"version": "0.1.0",
 	"time": "2019-01-18",
-	"keywords": ["phpbb", "extension", "calendar", "weekview"],
+	"keywords": ["phpbb", "extension", "calendar", "inline", "view"],
 	"license": "GPL-2.0",
 	"authors": [{
 		"name": "martti",
@@ -17,14 +17,14 @@
 		"php": ">=7.1"
 	},
 	"extra": {
-		"display-name": "Calendar Week View",
+		"display-name": "Calendar Inline View",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.2.1"
+			"phpbb/phpbb": ">=3.2.5"
 		},
 		"version-check": {
 			"host": "marttiphpbb.github.io",
 			"directory": "/version",
-			"filename": "calendarweekview.json"
+			"filename": "calendarinlineview.json"
 		}
 	}
 }
